<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_log_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mobileappdev.assassingame.LogInActivity">

    <Button
        android:text="@string/logInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_passwordEditText"
        android:layout_alignRight="@+id/login_passwordEditText"
        android:layout_alignEnd="@+id/login_passwordEditText"
        android:layout_marginTop="51dp"
        android:id="@+id/login_loginButton"/>

    <Button
        android:text="@string/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_signUpButton"
        android:layout_alignBaseline="@+id/login_loginButton"
        android:layout_alignBottom="@+id/login_loginButton"
        android:layout_toLeftOf="@+id/login_loginButton"
        android:layout_toStartOf="@+id/login_loginButton"
        android:layout_marginRight="12dp"
        android:layout_marginEnd="12dp"/>

    <TextView
        android:text="@string/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_passwordText"
        android:layout_alignBaseline="@+id/login_passwordEditText"
        android:layout_alignBottom="@+id/login_passwordEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:text="@string/email_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_emailText"
        android:layout_alignBaseline="@+id/login_emailEditText"
        android:layout_alignBottom="@+id/login_emailEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_marginTop="27dp"
        android:id="@+id/login_emailEditText"
        android:hint="@string/email_id"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/login_emailText"
        android:layout_toEndOf="@+id/login_emailText"
        android:layout_marginLeft="90dp"
        android:layout_marginStart="90dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_marginTop="33dp"
        android:id="@+id/login_passwordEditText"
        android:hint="@string/password"
        android:layout_below="@+id/login_emailEditText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/login_emailEditText"
        android:layout_alignStart="@+id/login_emailEditText"/>
</RelativeLayout>
