<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/dark_gray">

    <!--<ImageView
        android:id="@+id/game_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/testimg"/>-->

    <Button
        android:id="@+id/new_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_game"/>

    <Button
        android:id="@+id/join_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/join_game"/>

    <Button
        android:id="@+id/my_games"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_games"/>

    <Button
        android:id="@+id/stats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stats"/>

    <!--<Button-->
        <!--android:id="@+id/settings"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/settings"/>-->


    <Button
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout"/>
</LinearLayout>