<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText android:id="@+id/search_player_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/search_by_name_or_email_id"
        android:layout_weight="3"
        android:maxLines="1"
        android:layout_marginLeft="5dp"/>

    <Button android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/search"
        android:layout_weight="1"/>
</LinearLayout>