...
    <TextView style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/game_title"/>

    <EditText
        android:id="@+id/game_title_TF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:padding="16dp" />

    <LinearLayout
...
            android:layout_weight="1"
            android:text="Public (visible to all)" />

    </RadioGroup>
        </LinearLayout>
    <Button
        android:id="@+id/invite_players_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="16dp"
        android:text="@string/proceed" />

...
