<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListView
        android:id="@+id/search_results_list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>